--- a/index.html
+++ b/index.html
@@ -66,27 +66,29 @@
     </div>
 
     <div class="header">
-      <div class="header-top">
+      <div class="header-top-left">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 256 256"><path fill="currentColor"
+        d="m229.66 218.34l-50.07-50.06a88.11 88.11 0 1 0-11.31 11.31l50.06 50.07a8 8 0 0 0 11.32-11.32ZM40 112a72 72 0 1 1 72 72a72.08 72.08 0 0 1-72-72Z"/></svg>
         <input type="search" name="searchbar" id="search">
-        <div class="header-top-right">
-          <span>Bell</span>
-          <span>user-stuff</span>
-          <span>fs</span>
-        </div>
       </div>
-      <div class="header-bottom">
+      <div class="header-top-right">
+        <span>Bell</span>
+        <span>user-stuff</span>
+        <span>fs</span>
+      </div>
+      <div class="header-bottom-left">
         <span>user-welcome</span>
-        <div class="header-bottom-right">
-          <button>
-            New
-          </button>
-          <button>
-            Upload
-          </button>
-          <button>
-            Share
-          </button>
-        </div>
+      </div>
+      <div class="header-bottom-right">
+        <button>
+          New
+        </button>
+        <button>
+          Upload
+        </button>
+        <button>
+          Share
+        </button>
       </div>
     </div>
 
